plugins/javaFX/testData/highlighting/factoryMethod.fxml
<?import javafx.scene.control.ChoiceBox?>
<?import javafx.scene.layout.VBox?>
<?import java.lang.System?>
<?import java.util.Collections?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <ChoiceBox>
        <Collections fx:factory="emptyList"/>
    </ChoiceBox>
    <ChoiceBox>
        <Collections fx:factory="<error descr="Cannot resolve symbol 'unmodifiableList'">unmodifiableList</error>"/>
    </ChoiceBox>
    <ChoiceBox>
        <System fx:factory="<error descr="Cannot resolve symbol 'gc'">gc</error>"/>
    </ChoiceBox>
</VBox>